--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.2.1
 colorama==0.4.6
 contourpy==1.3.3
 cycler==0.12.1
+dotenv==0.9.9
 fastapi==0.116.1
 fonttools==4.59.2
 h11==0.16.0
@@ -23,8 +24,10 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 python-multipart==0.0.6
 pytz==2025.2
+redis==6.4.0
 requests==2.32.5
 setuptools==80.9.0
 six==1.17.0
